[FIX] dark mode color

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,6 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  color: white;
   background-color: #090c17;
 }
